pkg/front_end/testcases/expression/type_param_shadow_arg_ctor_inferred.expression.yaml.expect
Errors: {
  org-dartlang-debug:synthetic_debug_expression:2:13: Error: A value of type 'A<dynamic>' can't be assigned to a variable of type 'T'.
   - 'A' is from 'pkg/front_end/testcases/expression/main.dart'.
  Try changing the type of the left hand side, or casting the right hand side to 'T'.
    T k = new A();
              ^
}
method /* from org-dartlang-debug:synthetic_debug_expression */ debugExpr<T extends dynamic>() → dynamic
  return () → dart.core::Null {
    main::A::debugExpr::T k = let final<BottomType> #t1 = invalid-expression "org-dartlang-debug:synthetic_debug_expression:2:13: Error: A value of type 'A<dynamic>' can't be assigned to a variable of type 'T'.\n - 'A' is from 'pkg/front_end/testcases/expression/main.dart'.\nTry changing the type of the left hand side, or casting the right hand side to 'T'.\n  T k = new A();\n            ^" in new main::A::•<dynamic>() as{TypeError} <BottomType>;
  };
